[tool.poetry]
name = "homework-lesson-16"
version = "0.1.0"
description = "Автотесты с использованием pytest и selene"
authors = ["TommyMadness"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
pytest = ">=8.3.5"
selene = "==2.0.0rc9"

[tool.poetry.group.dev.dependencies]
pylint = "3.3.6"
allure-pytest = "^2.13.5"
python-dotenv = "^1.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
